--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/minify"]
 	path = lib/minify
 	url = https://github.com/mrclay/minify.git
+[submodule "lib/silk-icons"]
+	path = lib/silk-icons
+	url = https://github.com/markjames/famfamfam-silk-icons.git
