--- a/oxygen.class.yml
+++ b/oxygen.class.yml
@@ -7,17 +7,22 @@ scope:
     Controller: Oxygen_Controller
 
 views:
-    oxy:
+    inspected:
         access: public
+        args: { value: Object }
+        info: Put contents of given object in debug/inspectable form
+
+    oxy:
+        access: private
         args: { class: Object }
         info: Renders template
 
     exception:
-        access: public
+        access: private
         args: { ex: Exception }
         info: Renders given exception
 
     exception_trace:
-        access: public
+        access: private
         args: { trace: array }
         info: Renders given exception trace
