--- a/object/object.class.yml
+++ b/object/object.class.yml
@@ -4,13 +4,7 @@ extends: ~
 scope: false # NEVER SET IT FOR Oxygen_Object
 
 views:
-    short_title:
-        info: "Small title of $this, used in submenu captions"
-
-    full_title:
-        info: "Full title of $this. Suitable for usage in page title"
-
-    page_view:
+    page:
         info: "Renders full HTML documnet representation suitable for displaying in browser"
 
     view:
