--- a/object/object.class.yml
+++ b/object/object.class.yml
@@ -4,6 +4,11 @@ extends: ~
 scope: false # NEVER SET IT FOR Oxygen_Object
 
 views:
+    head:
+        args:
+            assets: array
+        info: "Renders HTML document HEAD section contents"
+
     page:
         info: "Renders full HTML documnet representation suitable for displaying in browser"
 
